# cookiecutter-python

./: .gitignore  README.rst  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/.ci/: make_dump.sh  upgrade_and_downgrade_db.py  upgrade_db.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: .coveragerc  orm.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/migrations/: alembic.example.ini  env.py
