[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "{{ cookiecutter.black_version }}"
isort = "{{ cookiecutter.isort_version }}"
flake8 = "{{ cookiecutter.flake8_version }}"
restview = "^2.9.2"
coverage = {extras = ["toml"], version = "^5.3"}

[tool.black]
line-length = {{ cookiecutter.line_length }}
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = {{ cookiecutter.line_length }}
combine_as_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = "error"

[tool.coverage.run]
source = ["."]
omit = ["{{ cookiecutter.project_slug }}/migrations/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
skip_empty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
